[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paffles"
version = "0.1.0"
description = "A Python project using pydantic-ai"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai[examples]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]
